[package]
name = "crypto-db"
version = "1.0.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.30", features = ["bundled-sqlcipher"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
once_cell = "1.21.3"
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"

[lib]
name = "crypto_db"
crate-type = ["cdylib"]